Uncollapsed Alignment fix ver1.1

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 }
 
-#L1 {
+.L1 {
     max-width: 579.583px;
 }
 
